--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ div.css-6qob1r.e1fqkh3o3 {
     /*padding-left: 10px;*/
     font-family: sans-serif;
     color: white;
+    font-weight: bold;
     padding: auto;
     border-radius: 20px;
 
@@ -24,5 +25,4 @@ header.css-1avcm0n.e8zbici2, footer.css-10pw50.egzxvld1{
     border-radius: 10px;
 
 }
-
 
